@@ -1,9 +1,11 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.987 2011-04-27 22:11:57 guru Exp $
+	$Id: ChangeLog,v 1.988 2011-04-27 22:50:03 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2011-04-27	pwessel
 	* gmt_map.c:		Store projected min/max in meters in current->rect_m[].
+	* spotter/grdrotater_func.c:	Ensure that output grid xmin/xmax honors the current
+				FORMAT_GEO_OUT range settings.
 
 2011-04-27	remko
 	* gmt_customio.c:	Now contains grid format descriptions and IDs.
